--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "file-loader": "1.1.5",
     "font-awesome": "^4.7.0",
     "fs-extra": "3.0.1",
+    "hoek": "^5.0.3",
     "html-webpack-plugin": "2.29.0",
     "jest": "20.0.4",
     "material-ui": "^1.0.0-beta.38",
